@@ -767,4 +767,9 @@
 	$g_display_errors[E_USER_NOTICE] = 'none';
 	$g_display_errors[E_USER_WARNING] = 'inline';
 	$g_display_errors[E_USER_ERROR] = 'halt';
+	
+	# seed to be used to generate CRC checksums for view-only-defects
+	# Assign to this variable a keyword that won't change.  If this value changes
+	# all hyper links to defects will be not work.
+	$g_admin_crypt_word = $g_path;
 ?>
