@@ -104,6 +104,7 @@ Mantis ChangeLog
  * Added core_error_API.php with a new pretty error handler and error_string() to obtain internationalized error strings
  * Added $g_delete_bugnote_threshold.
  * Added $g_update_bug_threshold.
+ * Added partial support to "Publish Bugs".  A user can publish a bug by generating a URL for it which includes CRC checksum, this link can then be used to open this bug even if the user is not logged into Mantis or does not even have an account.
 
 2002.08.23  -  0.17.5
  * Fixed problem where you could see public bugs if all projects were marked private (#2341)
